tests/neg/typetest.scala
object Test {

  val i: Int = 1

  println(i.isInstanceOf[Object])                     // error
}

